pretify home page, some fixes for home page styles on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -130,6 +130,9 @@ html, body {
 	height:352px;
 	background:url(../images/header_bg.png) top left repeat-x;
 	}
+.header__title_mobile {
+	display: none;
+}
 .top_block {
 	position:relative;
 	width:1032px;
